--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
-  "short_name": "megademo",
-  "name": "Mobile Mega Menu Demo",
-  "description": "A demo of the mobile menu that combines with the mega menu.",
+  "short_name": "centernav",
+  "name": "Centered Navigation Demo",
+  "description": "A demo of the centered navigation menu.",
   "display": "standalone",
   "orientation": "portrait",
   "theme_color": "#030303",
